--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^2.0.0",
     "@capacitor/core": "2.0.0",
     "@capacitor/ios": "^2.0.0",
     "@ionic/react": "^5.0.7",
